# baryonification

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py  test_example.py  zenodo_dl.py
baryonification/: __init__.py  cosmo.py  displ.py  halo_displ.py  io_utils.py  params.py  profiles.py  shell_utils.py
baryonification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: run_shell_baryonification.py  run_snapshot_baryonification.py  run_theory_profiles.py
